// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when there are NO accounts should render an empty view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M488.6 250.2L392 214V105.5c0-15-9.3-28.4-23.4-33.7l-100-37.5c-8.1-3.1-17.1-3.1-25.3 0l-100 37.5c-14.1 5.3-23.4 18.7-23.4 33.7V214l-96.6 36.2C9.3 255.5 0 268.9 0 283.9V394c0 13.6 7.7 26.1 19.9 32.2l100 50c10.1 5.1 22.1 5.1 32.2 0l103.9-52 103.9 52c10.1 5.1 22.1 5.1 32.2 0l100-50c12.2-6.1 19.9-18.6 19.9-32.2V283.9c0-15-9.3-28.4-23.4-33.7zM358 214.8l-85 31.9v-68.2l85-37v73.3zM154 104.1l102-38.2 102 38.2v.6l-102 41.4-102-41.4v-.6zm84 291.1l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6zm240 112l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6z"
              transform=""
            />
          </svg>
          <h5
            class="pf-c-title pf-m-lg"
          >
            accounts_table.empty_state
          </h5>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M488.6 250.2L392 214V105.5c0-15-9.3-28.4-23.4-33.7l-100-37.5c-8.1-3.1-17.1-3.1-25.3 0l-100 37.5c-14.1 5.3-23.4 18.7-23.4 33.7V214l-96.6 36.2C9.3 255.5 0 268.9 0 283.9V394c0 13.6 7.7 26.1 19.9 32.2l100 50c10.1 5.1 22.1 5.1 32.2 0l103.9-52 103.9 52c10.1 5.1 22.1 5.1 32.2 0l100-50c12.2-6.1 19.9-18.6 19.9-32.2V283.9c0-15-9.3-28.4-23.4-33.7zM358 214.8l-85 31.9v-68.2l85-37v73.3zM154 104.1l102-38.2 102 38.2v.6l-102 41.4-102-41.4v-.6zm84 291.1l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6zm240 112l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6z"
            transform=""
          />
        </svg>
        <h5
          class="pf-c-title pf-m-lg"
        >
          accounts_table.empty_state
        </h5>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`when there are any accounts should render a table with accounts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="accounts_table.aria_label"
        class="pf-c-table pf-m-grid-md"
        data-ouia-component-id="0"
        data-ouia-component-type="PF4/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class=""
        >
          <tr>
            <th
              class=""
              data-key="0"
              data-label="accounts_table.group_header"
              scope="col"
            >
              accounts_table.group_header
            </th>
            <th
              class=""
              data-key="1"
              data-label="accounts_table.admin_header"
              scope="col"
            >
              accounts_table.admin_header
            </th>
            <th
              class=""
              data-key="2"
              data-label="accounts_table.signup_header"
              scope="col"
            >
              accounts_table.signup_header
            </th>
            <th
              class=""
              data-key="3"
              data-label="accounts_table.applications_header"
              scope="col"
            >
              accounts_table.applications_header
            </th>
            <th
              class=""
              data-key="4"
              data-label="accounts_table.state_header"
              scope="col"
            >
              accounts_table.state_header
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class=""
            data-ouia-component-id="1"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-label="accounts_table.group_header"
            >
              Josemi's Corp.
            </td>
            <td
              class=""
              data-key="1"
              data-label="accounts_table.admin_header"
            >
              Josemi
            </td>
            <td
              class=""
              data-key="2"
              data-label="accounts_table.signup_header"
            >
              2019-10-18T05:13:26Z
            </td>
            <td
              class=""
              data-key="3"
              data-label="accounts_table.applications_header"
            >
              3
            </td>
            <td
              class=""
              data-key="4"
              data-label="accounts_table.state_header"
            >
              approved
            </td>
          </tr>
          <tr
            class=""
            data-ouia-component-id="2"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-label="accounts_table.group_header"
            >
              Damian's Corp.
            </td>
            <td
              class=""
              data-key="1"
              data-label="accounts_table.admin_header"
            >
              Damian
            </td>
            <td
              class=""
              data-key="2"
              data-label="accounts_table.signup_header"
            >
              2019-10-18T05:13:26Z
            </td>
            <td
              class=""
              data-key="3"
              data-label="accounts_table.applications_header"
            >
              3
            </td>
            <td
              class=""
              data-key="4"
              data-label="accounts_table.state_header"
            >
              approved
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="accounts_table.aria_label"
      class="pf-c-table pf-m-grid-md"
      data-ouia-component-id="0"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class=""
      >
        <tr>
          <th
            class=""
            data-key="0"
            data-label="accounts_table.group_header"
            scope="col"
          >
            accounts_table.group_header
          </th>
          <th
            class=""
            data-key="1"
            data-label="accounts_table.admin_header"
            scope="col"
          >
            accounts_table.admin_header
          </th>
          <th
            class=""
            data-key="2"
            data-label="accounts_table.signup_header"
            scope="col"
          >
            accounts_table.signup_header
          </th>
          <th
            class=""
            data-key="3"
            data-label="accounts_table.applications_header"
            scope="col"
          >
            accounts_table.applications_header
          </th>
          <th
            class=""
            data-key="4"
            data-label="accounts_table.state_header"
            scope="col"
          >
            accounts_table.state_header
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            data-key="0"
            data-label="accounts_table.group_header"
          >
            Josemi's Corp.
          </td>
          <td
            class=""
            data-key="1"
            data-label="accounts_table.admin_header"
          >
            Josemi
          </td>
          <td
            class=""
            data-key="2"
            data-label="accounts_table.signup_header"
          >
            2019-10-18T05:13:26Z
          </td>
          <td
            class=""
            data-key="3"
            data-label="accounts_table.applications_header"
          >
            3
          </td>
          <td
            class=""
            data-key="4"
            data-label="accounts_table.state_header"
          >
            approved
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            data-key="0"
            data-label="accounts_table.group_header"
          >
            Damian's Corp.
          </td>
          <td
            class=""
            data-key="1"
            data-label="accounts_table.admin_header"
          >
            Damian
          </td>
          <td
            class=""
            data-key="2"
            data-label="accounts_table.signup_header"
          >
            2019-10-18T05:13:26Z
          </td>
          <td
            class=""
            data-key="3"
            data-label="accounts_table.applications_header"
          >
            3
          </td>
          <td
            class=""
            data-key="4"
            data-label="accounts_table.state_header"
          >
            approved
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
